--- a/engine/env/spark/pom.xml
+++ b/engine/env/spark/pom.xml
@@ -69,6 +69,10 @@
 			<artifactId>spark-yarn_2.11</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.11</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
 			<scope>provided</scope>
