--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<slf4j.version>1.7.10</slf4j.version>
 		<junit.version>4.12</junit.version>
 		<hadoop.version>2.7.1</hadoop.version>
-		<spark.version>1.6.1</spark.version>
+		<spark.version>2.1.1</spark.version>
 		<easymock.version>3.4</easymock.version>
 		<httpcomponents.version>4.4.1</httpcomponents.version>
 		<guava.version>16.0.1</guava.version>
@@ -886,6 +886,34 @@
 			<dependency>
 				<groupId>org.apache.spark</groupId>
 				<artifactId>spark-yarn_2.11</artifactId>
+				<version>${spark.version}</version>
+				<scope>provided</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>jackson-core-asl</artifactId>
+						<groupId>org.codehaus.jackson</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jackson-mapper-asl</artifactId>
+						<groupId>org.codehaus.jackson</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jackson-jaxrs</artifactId>
+						<groupId>org.codehaus.jackson</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jackson-xc</artifactId>
+						<groupId>org.codehaus.jackson</groupId>
+					</exclusion>
+					<exclusion>
+						<groupId>asm</groupId>
+						<artifactId>asm</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.spark</groupId>
+				<artifactId>spark-sql_2.11</artifactId>
 				<version>${spark.version}</version>
 				<scope>provided</scope>
 				<exclusions>
